# google-mymaps-api

./: .gitignore  README.md  api.py  cookies.py  flake.nix  main.py  pyproject.toml
gmymaps/: __init__.py  api.py  cookies.py
mymaps/: api.py  cookies.py
